<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:autofillHints="Result"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btnmul"
        android:layout_width="70dp"
        android:layout_height="48dp"
        android:text="@string/mul"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn9"
        app:layout_constraintTop_toTopOf="@+id/btn9" />

    <Button
        android:id="@+id/btndiv"
        android:layout_width="70dp"
        android:layout_height="48dp"
        android:text="@string/div"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn6"
        app:layout_constraintTop_toTopOf="@+id/btn6" />

    <Button
        android:id="@+id/btnequal"
        android:layout_width="70dp"
        android:layout_height="48dp"
        android:text="@string/equal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnsign"
        app:layout_constraintTop_toTopOf="@+id/btnsign" />

    <Button
        android:id="@+id/btnadd"
        android:layout_width="70dp"
        android:layout_height="48dp"
        android:text="@string/add"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn3"
        app:layout_constraintTop_toTopOf="@+id/btn3" />

    <Button
        android:id="@+id/btn9"
        android:layout_width="70dp"
        android:layout_height="48dp"
        android:text="@string/_9"
        app:layout_constraintEnd_toStartOf="@+id/btnmul"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn8"
        app:layout_constraintTop_toTopOf="@+id/btn8" />

    <Button
        android:id="@+id/btn6"
        android:layout_width="70dp"
        android:layout_height="48dp"
        android:text="@string/_6"
        app:layout_constraintEnd_toStartOf="@+id/btndiv"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn5"
        app:layout_constraintTop_toTopOf="@+id/btn5" />

    <Button
        android:id="@+id/btnsign"
        android:layout_width="70dp"
        android:layout_height="48dp"
        android:text="@string/sub"
        app:layout_constraintEnd_toStartOf="@+id/btnequal"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn0"
        app:layout_constraintTop_toTopOf="@+id/btn0" />

    <Button
        android:id="@+id/btn3"
        android:layout_width="70dp"
        android:layout_height="48dp"
        android:text="@string/_3"
        app:layout_constraintEnd_toStartOf="@+id/btnadd"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn2"
        app:layout_constraintTop_toTopOf="@+id/btn2" />

    <Button
        android:id="@+id/btn8"
        android:layout_width="70dp"
        android:layout_height="48dp"
        android:text="@string/_8"
        app:layout_constraintEnd_toStartOf="@+id/btn9"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn7"
        app:layout_constraintTop_toTopOf="@+id/btn7" />

    <Button
        android:id="@+id/btn5"
        android:layout_width="70dp"
        android:layout_height="48dp"
        android:text="@string/_5"
        app:layout_constraintEnd_toStartOf="@+id/btn6"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn4"
        app:layout_constraintTop_toTopOf="@+id/btn4" />

    <Button
        android:id="@+id/btn0"
        android:layout_width="70dp"
        android:layout_height="48dp"
        android:text="@string/_0"
        app:layout_constraintEnd_toStartOf="@+id/btnsign"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btndel"
        app:layout_constraintTop_toTopOf="@+id/btndel" />

    <Button
        android:id="@+id/btn2"
        android:layout_width="70dp"
        android:layout_height="48dp"
        android:text="@string/_2"
        app:layout_constraintEnd_toStartOf="@+id/btn3"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn1"
        app:layout_constraintTop_toTopOf="@+id/btn1" />

    <Button
        android:id="@+id/btndel"
        android:layout_width="70dp"
        android:layout_height="48dp"
        android:layout_marginTop="28dp"
        android:text="@string/del"
        app:layout_constraintEnd_toStartOf="@+id/btn0"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn1" />

    <Button
        android:id="@+id/btn1"
        android:layout_width="70dp"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:text="@string/_1"
        app:layout_constraintEnd_toStartOf="@+id/btn2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn4" />

    <Button
        android:id="@+id/btn4"
        android:layout_width="70dp"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:text="@string/_4"
        app:layout_constraintEnd_toStartOf="@+id/btn5"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn7" />

    <Button
        android:id="@+id/btn7"
        android:layout_width="70dp"
        android:layout_height="48dp"
        android:layout_marginTop="44dp"
        android:text="@string/_7"
        app:layout_constraintEnd_toStartOf="@+id/btn8"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="76dp"
        android:text="@string/calculator"
        android:textAllCaps="true"
        android:textColor="#F44336"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.386"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="104dp"
        android:hint="@string/expression"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView1" />

    <Button
        android:id="@+id/btnclear"
        android:layout_width="70dp"
        android:layout_height="48dp"
        android:text="@string/c"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.923"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnequal"
        app:layout_constraintVertical_bias="0.184" />

</androidx.constraintlayout.widget.ConstraintLayout>